# webptools

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yaml
src/: App.tsx  index.css  main.tsx  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: content.tsx  footer.tsx  header.tsx  option-button.tsx
src/hooks/: use-encode-option.ts  use-image-file-drop.ts  useFileDnD.tsx
src/providers/: contexts.ts  encode-option-provider.tsx
src/store/: index.ts
src/utils/: index.ts
